# SylvinaJTOOL

./: .eslintrc.cjs  .gitignore  README.md  package-lock.json  package.json
public/: index.html
src/: App.css  App.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AssetManager.js  ControlTree.js  EditorCanvas.js  NineSlice.js  NuiParser.js  PropertyPanel.js
src/utils/: EncodingUtils.js  ExportHtmlCss.js  SprParser.js  TgaLoader.js  base64.js  controlSelection.js  desktopBridge.js  editorConstants.js  nuiData.js  useSpriteAssets.js
static-assets/: .gitkeep
tools/: copy-tauri-artifact.js  generate-icons.js  run-cargo.js
