[package]
name = "sylvinajtool"
version = "0.1.0"
description = "Standalone Tauri NUI editor for Rappelz."
authors = ["Sylvina Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
